Update label for Combat HETS entry

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ function populateSelectors() {
     { raw: "Zone 2 DFAC",       label: "Zone 2 DFAC" },
     { raw: "Turf Track",        label: "Turf Track" },
     { raw: "ZONE 6 PX/GYM",     label: "Zone 6 PX/Gym" }, // matches JSON stop
-    { raw: "Combat HETS",       label: "Combat HETS" },
+    { raw: "COMBAT HETS (1100/ 1300 BLOCK)",       label: "COMBAT HETS (1100/ 1300 BLOCK)" },
     { raw: "Senior Pods",       label: "Senior Pods" },
     { raw: "TMC",               label: "TMC" }
   ];
