--- a/index.html
+++ b/index.html
@@ -280,6 +280,30 @@ footer {
   font-size: 0.78rem;
 }
 
+.feedback-fab {
+  position: fixed;
+  right: 16px;
+  bottom: 16px;
+  border-radius: 999px;
+  border: 1px solid var(--accent);
+  padding: 10px 16px;
+  font-size: 0.9rem;
+  background: linear-gradient(135deg, var(--accent), var(--accent-2));
+  color: #fff;
+  font-weight: 600;
+  box-shadow: 0 10px 24px rgba(0, 76, 135, 0.45);
+  cursor: pointer;
+  z-index: 100;
+}
+
+.feedback-fab:hover {
+  transform: translateY(-1px);
+}
+
+.feedback-fab:active {
+  transform: translateY(0);
+}
+
     
   </style>
 </head>
@@ -672,6 +696,14 @@ init();
 
 
 </script>
+
+<button
+  class="feedback-fab"
+  type="button"
+  onclick="window.open('https://forms.gle/ZGU6c1VckFTU1XBV6', '_blank', 'noopener')"
+>
+  Feedback
+</button>
 
 </body>
 </html>
